LTE form min-height to avoid jumpiness as components render

--- a/src/styles/pages/_lte.scss
+++ b/src/styles/pages/_lte.scss
@@ -34,6 +34,7 @@ body.lte {
 
   .ak-form {
     margin-top: 160px;
+    min-height: 600px;
   }
 
   .btn-lte {
